fixed navigation switch on mobile and desktop

--- a/src/Lessons/Navigation/Navigation.module.css
+++ b/src/Lessons/Navigation/Navigation.module.css
@@ -1,89 +1,40 @@
 .Controller {
-    height: 0;
-    bottom: auto;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    z-index: 999;
+}
+
+.ControllerDesktop {
     top: 73px;
     left: 10px;
     max-width: 300px;
-    position: fixed;
-    width: 100%;
-    z-index: 999;
-}
-
-.ControllerBottom {
-    height: 80px;
-    width: 100%;
-    bottom: 0;
-    top: auto;
-    left: auto;
-    z-index: 999;
-    max-width: 100%;
-
-    position: fixed;
-    display: block;
-}
-
-.ControllerOpen {
-    height: 80%;
 }
 
 .ControllerHeader {
-    height: 80px;
-    padding: 5px;
-    background-color: white;
-    border: 1px solid #e1e8ed;
-    display: flex;
-    justify-content: space-between;
-    cursor: pointer;
-    position: relative;
+
 }
 
 .ControllerBody {
-    padding: 20px;
-    margin-bottom: 20px;
-    height: 90%;
-    background-color: white;
-    overflow-y: scroll;
-    overflow-x: hidden;
+
 }
 
 .Titles {
-    margin: 0 10px;
-    flex-basis: 100%;
-    justify-content: flex-start;
-    display: flex;
-    flex-direction: column;
-    text-align: left;
+
 }
 
 .ModuleTitle {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: 280px;
-    margin: 0;
-    font-size: 18px;
-    line-height: 1.6;
+
 }
 
 .chapterTitle {
-    font-size: 16px;
+
 }
 
 .Thumbnail {
-    height: 70px;
-    width: 70px;
-    position: relative;
-    flex-basis: 70px;
-    align-self: flex-end;
-    order: 10;
+
 }
 
 .ThumbnailImg {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    max-height: 100%;
-    border-radius: 4px;
-    vertical-align: middle;
-    border: 0;
+
 }
